deployment/common/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: demo
  annotations:
    nginx.org/ssl-services: "api,vuejs"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://elyte.test, http://elyte.test, http://*.elyte.test, http://localhost:8080, http://elyte.test:8080, http://elyte.test:3001, https://localhost:8080, https://elyte.test:443, https://elyte.test:4001"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '*.elyte.test'
        - elyte.test
        - backend.elyte.test
      secretName: tls-secret
  rules:
  - host: backend.elyte.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
  
  - host: elyte.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vuejs
            port:
              number: 8080
